--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -3,9 +3,7 @@ name: Astronomer CI - Deploy code (Multiple Branches)
 on:
   push:
     branches: [dev]
-  pull_request:
-    types:
-      - closed
+  push:
     branches: [main]
 
 jobs:
@@ -20,7 +18,7 @@ jobs:
     - name: Deploy to Astro
       uses: astronomer/deploy-action@v0.1
   prod-push:
-    if: github.event.action == 'closed' && github.event.pull_request.merged == true
+    if: github.ref == 'refs/heads/main'
     env:
       ## Sets PROD Deployment API key credentials as environment variables
       ASTRONOMER_KEY_ID: ${{ secrets.PROD_ASTRONOMER_KEY_ID }}
